--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: CodeDerps
 email: richard@torenvliet.org
+author: Richard Torenvliet
 description: >- # this means to ignore newlines until "baseurl:"
   A collection guides and thoughts about programming, about things I've personally encountered through the years, years of study and working experience.
 baseurl: "" # the subpath of your site, e.g. /blog
